# Math-Verify

./: .gitignore  0423_evaluate_model_outputs_json_bon.py  0423_gen_self_rewarding_resp_and_reward.py  CHANGELOG.md  Makefile  README.md  data_utils.py  evaluate_model.py  evaluate_model_outputs.py  evaluate_model_outputs_json_maj.py  evaluate_model_outputs_json_orlhf_eval_results.py  extract_answers.py  pyproject.toml  requirements.txt  vllm_gen_outputs.py
data/: data_utils.py
math_evaluator/: grader.py  metric.py  parser.py  run_eval.py  tasks.py
math_verify/: __init__.py  few_shots.py
scripts/: evaluate_model.sh  evaluate_model_all_gt.sh  evaluate_output.sh  evaluate_output_all.sh  evaluate_output_bon.sh  evaluate_output_maj.sh  evaluate_output_orlhf_eval_results.sh  gen_self_rewarding_resp_and_reward.sh  vllm_gen_outputs.sh  vllm_gen_outputs_bon.sh
src/math_verify/: __init__.py  few_shots.py  grader.py  metric.py  parser.py  tasks.py  utils.py
tests/: test_all.py  test_configs.py  test_numina_cases.py  test_open_thoughts.py  test_strict.py  test_string_extraction.py  test_timeout.py  test_yujianll.py
