
[project]
name = "math-verify"
version = "0.5.0"
description = "A library for verifying mathematical answers"
authors = [
    { name = "Hynek Kydlíček", email = "hynek.kydlicek@huggingface.co" }
]
dependencies = [
    "latex2sympy2_extended==1.0.3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
inference = [
    "lighteval[accelerate]",
]

[tool.hatch.build.targets.wheel]
[tool.setuptools.packages.find]
where = ["src"]