[project]
name = "math-verify"
version = "0.5.3"
description = "A library for verifying mathematical answers"
authors = [
    { name = "Hynek Kydlíček", email = "hynek.kydlicek@huggingface.co" }
]
dependencies = [
    "latex2sympy2_extended==1.0.7",
]
requires-python = ">=3.10"

[project.optional-dependencies]
inference = [
    "lighteval @ git+https://github.com/huggingface/lighteval.git@86f62259f105ae164f655e0b91c92a823a742724#egg=lighteval[math]"
]

antlr4_9_3 = [
    "latex2sympy2_extended[antlr4_9_3]"
]

antlr4_11_0 = [
    "latex2sympy2_extended[antlr4_11_0]"
]

antlr4_13_2 = [
    "latex2sympy2_extended[antlr4_13_2]"
]


[tool.hatch.build.targets.wheel]
[tool.setuptools.packages.find]
where = ["src"]